upgrade server-vars and dependencies

--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
   },
   "homepage": "https://github.com/1stdibs/copy-text#readme",
   "dependencies": {
-    "lodash.assign": "~4.0.0",
-    "lodash.reduceright": "~4.0.0",
-    "lodash.template": "~4.0.0",
-    "reku": "~1.1.1",
-    "server-vars": "~2.0.1"
+    "lodash.template": "^4.0.0",
+    "server-vars": "^3.0.4"
   },
   "devDependencies": {
+    "lodash.get": "^4.4.2",
     "mocha": "~3.0.2"
   }
 }
